// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`domain/article/ArticleCard Snap Shot ArticleCard 1`] = `
<article>
  <button
    className="flex w-full items-center gap-4 rounded bg-custom-white p-4 text-left backdrop:cursor-pointer hover:opacity-60"
    onClick={[Function]}
  >
    <img
      alt="記事のイメージ画像"
      className="hidden rounded object-contain sm:inline-block"
      data-nimg="1"
      decoding="async"
      height={120}
      loading="lazy"
      onError={[Function]}
      onLoad={[Function]}
      src="/_next/image?url=https%3A%2F%2Fplacehold.jp%2F120x120.png&w=256&q=75"
      srcSet="/_next/image?url=https%3A%2F%2Fplacehold.jp%2F120x120.png&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Fplacehold.jp%2F120x120.png&w=256&q=75 2x"
      style={
        {
          "color": "transparent",
        }
      }
      width={120}
    />
    <div
      className="flex flex-1 flex-col gap-1 overflow-x-hidden"
    >
      <h2
        className="border-b pb-1 text-xl"
      >
        タイトル
      </h2>
      <ul
        className="hidden-scrollbar flex w-full overflow-y-clip overflow-x-scroll"
      >
        <li
          className="whitespace-nowrap"
        >
          <span
            className="rounded-sm py-1 text-sm"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              {
                "backgroundColor": "transparent",
                "color": "#00b8d2",
                "paddingLeft": 0,
                "paddingRight": 8,
              }
            }
          >
            #
            Front-end
          </span>
        </li>
        <li
          className="whitespace-nowrap"
        >
          <span
            className="rounded-sm py-1 text-sm"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              {
                "backgroundColor": "transparent",
                "color": "#00b8d2",
                "paddingLeft": 0,
                "paddingRight": 8,
              }
            }
          >
            #
            React
          </span>
        </li>
      </ul>
      <p
        className="w-full description text-sm text-custom-gray"
      >
        Firestore は〇〇です。\\nガチ完成なのでぜひ読んでくださいね！
      </p>
    </div>
  </button>
</article>
`;

exports[`domain/article/ArticleCard Snap Shot ArticleCard without imageUrl 1`] = `
<article>
  <button
    className="flex w-full items-center gap-4 rounded bg-custom-white p-4 text-left backdrop:cursor-pointer hover:opacity-60"
    onClick={[Function]}
  >
    <div
      className="flex flex-1 flex-col gap-1 overflow-x-hidden"
    >
      <h2
        className="border-b pb-1 text-xl"
      >
        タイトル
      </h2>
      <ul
        className="hidden-scrollbar flex w-full overflow-y-clip overflow-x-scroll"
      >
        <li
          className="whitespace-nowrap"
        >
          <span
            className="rounded-sm py-1 text-sm"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              {
                "backgroundColor": "transparent",
                "color": "#00b8d2",
                "paddingLeft": 0,
                "paddingRight": 8,
              }
            }
          >
            #
            Front-end
          </span>
        </li>
        <li
          className="whitespace-nowrap"
        >
          <span
            className="rounded-sm py-1 text-sm"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              {
                "backgroundColor": "transparent",
                "color": "#00b8d2",
                "paddingLeft": 0,
                "paddingRight": 8,
              }
            }
          >
            #
            React
          </span>
        </li>
      </ul>
      <p
        className="w-full description text-sm text-custom-gray"
      >
        Firestore は〇〇です。\\nガチ完成なのでぜひ読んでくださいね！
      </p>
    </div>
  </button>
</article>
`;
